// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard component snapshot: collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <Card
    orientation="vertical"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div>
        <CourseCardContent
          cardId="test-card-id"
          orientation="vertical"
        />
      </div>
      <div
        className="course-card-banners"
        data-testid="CourseCardBanners"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
      </div>
    </div>
  </Card>
</div>
`;

exports[`CourseCard component snapshot: not collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <Card
    orientation="horizontal"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div
        className="d-flex"
      >
        <CourseCardContent
          cardId="test-card-id"
          orientation="horizontal"
        />
      </div>
      <div
        className="course-card-banners"
        data-testid="CourseCardBanners"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
      </div>
    </div>
  </Card>
</div>
`;
